# ai-diagnos-lsp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
ai_diagnos_lsp/: AIDiagnosLSPClass.py  default_config.py  main.py
ai_diagnos_lsp/AnalysisSubsystem/: AnalysisSubsystemClass.py  README.md
ai_diagnos_lsp/AnalysisSubsystem/analysers/: BasicDiagnoseFunction.py  BasicLogicAnalyser.py  BasicStyleAnalyser.py  CrossFileAnalyser.py  CrossFileLogicAnalyser.py  CrossFileStyleAnalyser.py  README.md
ai_diagnos_lsp/AnalysisSubsystem/analysers/chains/: BasicChainGemini.py  BasicChainGroq.py  BasicChainOmniprovider.py  BasicChainOpenrouter.py  GeneralDiagnosticsPydanticOutputParser.py  README.md
ai_diagnos_lsp/AnalysisSubsystem/analysers/chains/LLM/: BasicCerebrasLLM.py  BasicClaudeLLM.py  BasicGeminiLLM.py  BasicHuggingFaceLLM.py  BasicOmniproviderLLM.py  BasicOpenAiLLM.py  README.md  __init__.py
ai_diagnos_lsp/AnalysisSubsystem/analysers/chains/PromptObjekts/: BasicAnalysisPrompt.py  BasicLogicAnalysisPrompt.py  BasicStyleAnalysisPrompt.py  CrossFileAnalysisPrompt.py  CrossFileLogicAnalysisPrompt.py  CrossFileStylePrompt.py  README.md
ai_diagnos_lsp/AnalysisSubsystem/analysers/chains/PromptObjekts/prompts/: EXEMPLARS.py  README.md  SHARED.py  cross_file_analysis_system_prompt.py  general_analysis_system_prompt.py  style_analysis_prompts.py  (+1 more)
ai_diagnos_lsp/DiagnosticsHandlingSubsystem/: README.md  main.py
ai_diagnos_lsp/DiagnosticsHandlingSubsystem/Converters/: GeneralDiagnosticsPydanticToLSProtocol.py  README.md
ai_diagnos_lsp/analysers/: BasicDiagnoseFunction.py
ai_diagnos_lsp/analysers/chains/: BasicChainGemini.py  BasicChainOmniprovider.py  GeneralDiagnosticsPydanticOutputParser.py
ai_diagnos_lsp/analysers/chains/LLM/: BasicGroqLLM.py  BasicOpenrouterLLM.py
ai_diagnos_lsp/analysers/chains/prompts/: README.md  general_analysis_system_prompt.txt
ai_diagnos_lsp/utils/: get_overrides.py  grep.py  json_repair.py  parser.py  strip_scratchpad.py
ai_diagnos_lsp/utils/analyser/: chain_invoker.py  llm_generator.py
