[project]
name = "AI_LSP"
version = "0.1.0"
description = "An LSP with langchain + openrouter API as its backend. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.9",
    "langchain-google-genai[standart]>=4.2.0",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.1.7",
    "pygls>=2.0.1",
]

[project.scripts]
ai-diagnos-lsp = "ai_diagnos_lsp.main:main"

[tool.uv]
resultion = "lowest-direct"
cache_dir = ".uv-cache"
no_cache = false
