[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "AI_LSP"
version = "0.15"
description = "An AI powered LSP providing AI highly configurable AI diagnostics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "json-repair>=0.1.5",
    "langchain>=1.2.9",
    "langchain-cerebras>=0.7.0",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-openai>=1.1.7",
    "pygls>=2.0.1",
    "langchain-anthropic>=0.3",
    "numpy>=2",
]

[project.scripts]
ai-diagnos-lsp = "ai_diagnos_lsp.main:main"

[tool.uv]
resolution = "lowest-direct"
cache-dir = ".uv-cache"
no-cache = false
concurrent-builds = 1
package = true
override-dependencies = [
    "hf-xet; sys_platform == 'never'"
]

[tool.pyright]
typeCheckingMode = "normal"

[tool.hatch.version]
source = "vcs"
